dfir_rs/tests/compile-fail-stable/surface_loop_source.rs
../compile-fail/surface_loop_source.rs